gcc/testsuite/rust/rustc/ui/parser/pat-ranges-4.rs
// Parsing of range patterns

fn main() {
    let 10 - 3 ..= 10 = 8;
// { dg-error "" "" { target *-*-* } .-1 }
}

